--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,8 @@
       "use": "@vercel/node"
     }
   ],
-  "functions": {
-    "api/**/*.js": { "runtime": "nodejs22.x" }
-  },
   "rewrites": [
     { "source": "/api/:match*", "destination": "/api/:match*" },
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
