--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "cd engineer_connect-app && npm run build"
+    "build": "cd engineer_connect-app && npm install && npm run build",
+    "install": "cd engineer_connect-app && npm install"
   },
   "dependencies": {
     "axios": "^1.11.0",
