Fix Vercel deployment build issues - Optimize build script with npm ci for faster, reliable builds - Add explicit installCommand in vercel.json for dependency management - Fix ESLint warning in api.js export statement - Test confirmed: build process now works successfully - Ready for error-free Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "engineer_connect-app/build",
+  "installCommand": "npm install",
   "functions": {
     "api/**/*.js": {
       "runtime": "@vercel/node@20.0.0"
