--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "cd engineer_connect-app && npm ci && npm run build",
-    "postinstall": "cd engineer_connect-app && npm install"
+    "build": "npm run build --prefix engineer_connect-app",
+    "install": "npm install --prefix engineer_connect-app",
+    "postinstall": "npm install --prefix engineer_connect-app"
   },
   "dependencies": {
     "axios": "^1.11.0",
