--- a/engineer_connect-app/vercel.json
+++ b/engineer_connect-app/vercel.json
@@ -1,8 +1,13 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "build",
+  "outputDirectory": "engineer_connect-app/build",
   "installCommand": "npm install",
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "@vercel/node@20.0.0"
+    }
+  },
   "rewrites": [
     { "source": "/api/:match*", "destination": "/api/:match*" },
     { "source": "/(.*)", "destination": "/index.html" }
